--- a/ui/src/app/components/sidebar/sidebar.component.html
+++ b/ui/src/app/components/sidebar/sidebar.component.html
@@ -1,8 +1,8 @@
 <div class="card">
-  <div class="card-header">
+  <div role="button" class="card-header" (click)="toggleCommunityCollapse()">
     <i class="fa fa-fw fa-users"></i> Communities
   </div>
-  <ul class="list-group">
+  <ul *ngIf="!communityCollapsed" class="list-group">
     <li class="list-group-item">
       <a [routerLink]="['/']" class="link-unstyled overflow">Front page</a>
     </li>
@@ -18,10 +18,10 @@
 </div>
 <div *ngIf="userService?.getFavoriteDiscussions()"
   class="card">
-  <div class="card-header">
+  <div role="button" class="card-header" (click)="toggleDiscussionCollapse()">
     <i class="fa fa-fw fa-comments"></i>    Discussions
   </div>
-  <ul class="list-group">
+  <ul *ngIf="!discussionCollapsed" class="list-group">
     <li *ngFor="let discussion of userService.getFavoriteDiscussions()"
       class="list-group-item overflow">
       <a [routerLink]="['/discussion', discussion.id]"
