--- a/ui/src/app/components/discussion/discussion.component.html
+++ b/ui/src/app/components/discussion/discussion.component.html
@@ -1,9 +1,12 @@
 <div class="row bottom-margin">
   <div class="col-xs-12 col-lg-10" (window:scroll)="onScroll($event)">
-    <app-discussion-card [discussion]="discussion" [editMode]="editMode()"></app-discussion-card>
+    <app-discussion-card *ngIf="discussion" [discussion]="discussion"
+      [editMode]="editMode()"></app-discussion-card>
     <div *ngFor="let comment of comments" class="card">
       <app-comment [comment]="comment" (replyingEvent)="setIsReplying($event)"></app-comment>
     </div>
+    <i *ngIf="!comments" class="fa fa-circle-o-notch fa-spin fa-3x text-xs-center block"></i>
+    <h4 *ngIf="comments?.length == 0">No Comments</h4>
   </div>
   <div class="col-xs-12 col-lg-2">
     <div class="card">
