--- a/ui/src/app/components/tag/tag.component.html
+++ b/ui/src/app/components/tag/tag.component.html
@@ -32,5 +32,11 @@
         [discussion]="discussion"></app-discussion-card>
     </div>
   </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <i *ngIf="!discussions" class="fa fa-circle-o-notch fa-spin fa-3x text-xs-center block"></i>
+      <h4 *ngIf="discussions?.length == 0">No Discussions</h4>
+    </div>
+  </div>
   <app-footer></app-footer>
 </div>
