--- a/ui/src/app/styles/extras.scss
+++ b/ui/src/app/styles/extras.scss
@@ -153,3 +153,7 @@ a {
 button, html [type="button"], [type="reset"], [type="submit"] {
     -webkit-appearance: none !important;
 }
+
+.block {
+  display: block !important;
+}
