--- a/ui/src/app/components/community/community.component.html
+++ b/ui/src/app/components/community/community.component.html
@@ -1,10 +1,10 @@
 <div class="col-lg-11 col-xs-12">
   <div class="row">
-    <div class="col-xs-12" [class.col-md-10]="!editMode() && discussions.length > 0">
+    <div class="col-xs-12" [class.col-md-10]="!editMode()">
       <app-community-card *ngIf="community" [community]="community"
         [editMode]="editMode()" (editing)="editing($event)"></app-community-card>
     </div>
-    <div *ngIf="!editMode() && discussions.length > 0"
+    <div *ngIf="!editMode()"
       class="col-xs-12 col-md-2">
       <select [ngModel]="sorting" (ngModelChange)="resort($event)"
         class="form-control">
