Adding a saving spinner. Fixes #45

--- a/ui/src/app/components/community-card/community-card.component.html
+++ b/ui/src/app/components/community-card/community-card.component.html
@@ -212,7 +212,10 @@
         <br>
         <div class="btn-group" role="group">
           <button [disabled]="!communityForm.form.valid"
-            (click)="saveCommunity()" class="btn btn-primary">Save</button>
+            (click)="saveCommunity()" class="btn btn-primary">
+            <span *ngIf="!isSaving">Save</span>
+            <span *ngIf="isSaving">Saving<i class="fa fa-fw fa-circle-o-notch fa-spin"></i></span>
+          </button>
           <button type="button" (click)="toggleEditMode()"
             class="btn btn-warning">Cancel</button>
           <button type="button" (click)="deleteCommunity()"
