--- a/ui/src/app/components/discussion-card/discussion-card.component.html
+++ b/ui/src/app/components/discussion-card/discussion-card.component.html
@@ -225,7 +225,10 @@
         <br>
         <div class="btn-group" role="group">
           <button [disabled]="!discussionForm.form.valid"
-            (click)="saveDiscussion()" class="btn btn-primary">Save</button>
+            (click)="saveDiscussion()" class="btn btn-primary">
+            <span *ngIf="!isSaving">Save</span>
+            <span *ngIf="isSaving">Saving<i class="fa fa-fw fa-circle-o-notch fa-spin"></i></span>
+          </button>
           <button type="button" (click)="toggleEditMode()"
             class="btn btn-warning">Cancel</button>
           <button type="button" (click)="deleteDiscussion()"
