--- a/ui/src/app/components/discussion-card/discussion-card.component.html
+++ b/ui/src/app/components/discussion-card/discussion-card.component.html
@@ -4,7 +4,7 @@
       <div class="card-block card-block-no-bottom">
         <h4 class="card-title">
           <a [routerLink]="['/discussion', discussion.id]" class="link-unstyled">{{discussion.title}} </a>
-          <small *ngIf="isCreator()"><i class="fa fa-fw fa-edit" role="button" (click)="toggleEditMode()" tooltipPlacement="bottom" tooltip="Edit"></i></small>
+          <small *ngIf="isCreator"><i class="fa fa-fw fa-edit" role="button" (click)="toggleEditMode()" tooltipPlacement="bottom" tooltip="Edit"></i></small>
         </h4>
       </div>
       <a *ngIf="discussion.link && isImageType(discussion.link)"
@@ -31,8 +31,8 @@
       </small>
         <ul class="list-inline">
           <li *ngIf="discussion.private_" class="tag tag-danger list-inline-item">Private</li>
-          <li *ngIf="!isCreator()" role="button"
-            class="list-inline-item" (click)="toggleShowVoteSlider()"
+          <li *ngIf="!isCreator" role="button" class="list-inline-item"
+            (click)="toggleShowVoteSlider()"
             tooltipPlacement="bottom" tooltip="Vote"><i class="fa fa-fw fa-star-half-o"></i></li>
           <li *ngIf="discussion.avgRank" class="tag tag-pill tag-default list-inline-item"
             tooltipPlacement="bottom" tooltip="Average Score">
@@ -53,6 +53,11 @@
               <i class="fa fa-fw fa-comments-o" tooltipPlacement="bottom"
                 tooltip="Comments"></i></a>
           </li>
+          <li role="button" *ngIf="isCreator || isModerator"
+            (click)="deleteDiscussion()" class="list-inline-item">
+            <i class="fa fa-fw fa-remove" tooltipPlacement="bottom"
+              tooltip="Delete"></i>
+          </li>
         </ul>
         <div *ngIf="showVoteSlider">
           <input [value]="discussion.userRank" (mouseup)="saveDiscussionRank($event.target.value)"
@@ -71,7 +76,8 @@
           <div class="col-sm-10">
             <input [(ngModel)]="discussion.title" class="form-control"
               required minlength="3" maxlength="140"
-              name="discussion_title" #discussionTitle="ngModel"/>
+              name="discussion_title" #discussionTitle="ngModel"
+            />
             <div *ngIf="discussionTitle.dirty" class="help-block text-danger">
               <small *ngIf="discussionTitle.errors?.pattern">Invalid title</small>
               <small *ngIf="discussionTitle.errors?.required">A title is required</small>
