--- a/ui/src/app/components/sidebar/sidebar.component.html
+++ b/ui/src/app/components/sidebar/sidebar.component.html
@@ -16,7 +16,7 @@
     </li>
   </ul>
 </div>
-<div *ngIf="userService?.getFavoriteDiscussions().length > 0"
+<div *ngIf="userService?.getFavoriteDiscussions()"
   class="card">
   <div role="button" class="card-header" (click)="toggleDiscussionCollapse()">
     <i class="fa fa-fw fa-comments"></i>    Discussions
